// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given TimeLabel When render with time -1 and resting is false 1`] = `
<div
  style={
    Object {
      "color": "blue",
      "fontSize": "250pt",
    }
  }
>
  0
</div>
`;

exports[`Given TimeLabel When render with time 0 and resting is true 1`] = `
<div
  style={
    Object {
      "color": "green",
      "fontSize": "250pt",
    }
  }
>
  0
</div>
`;

exports[`Given TimeLabel When render with time 35 and resting is false 1`] = `
<div
  style={
    Object {
      "color": "blue",
      "fontSize": "250pt",
    }
  }
>
  1
</div>
`;

exports[`Given TimeLabel When render with time 1000 and resting is true 1`] = `
<div
  style={
    Object {
      "color": "green",
      "fontSize": "250pt",
    }
  }
>
  1
</div>
`;

exports[`Given TimeLabel When render with time 1499 and resting is false 1`] = `
<div
  style={
    Object {
      "color": "blue",
      "fontSize": "250pt",
    }
  }
>
  2
</div>
`;

exports[`Given TimeLabel When render with time 100000 and resting is true 1`] = `
<div
  style={
    Object {
      "color": "green",
      "fontSize": "130pt",
    }
  }
>
  2 mins
</div>
`;
